--- a/spec/src/main/resources/application.properties
+++ b/spec/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=openapi-platform
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=testuser
+spring.datasource.password=testuser1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
