--- a/spec/src/main/resources/application.properties
+++ b/spec/src/main/resources/application.properties
@@ -3,3 +3,28 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=testuser
 spring.datasource.password=testuser1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Kafka Config
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Consumer Configuration
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+# Producer Configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Template Configuration
+spring.kafka.template.default-topic=my-topic
+
+# Custom Kafka Configuration
+kafka.topic.name=my-topic
+kafka.consumer.group-id=my-group
+
+# Redis Config
+spring.redis.host=localhost
+spring.redis.port=6379
